--- a/style/index.css
+++ b/style/index.css
@@ -1,1 +1,107 @@
-/* CSS stillerinizi buraya girin */
+body {
+
+    margin: 0;
+    padding: 0;
+}
+
+header {
+
+    display: flex;
+    justify-content: space-between;
+    padding: 1%;
+    align-items: center;
+}
+
+nav a {
+
+    width: 5rem;
+    padding: 1rem;
+    border: 1px solid black;
+    text-decoration: none;
+    color: black;
+}
+
+.avtive {
+    background-color: black;
+    color: white;
+}
+
+main {
+
+
+    background: url("https://picsum.photos/500/300");
+    width: 70vw;
+    height: 42vw;
+    background-size: cover;
+    margin: 2rem auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+    flex-direction: column;
+}
+main a, footer  a{
+    padding: 1% 3%;
+    border: 1px solid black;
+    text-decoration: none;
+    color: black;
+    background-color: white;
+}
+h1{
+    font-size: 6rem;
+    margin-bottom: 2rem;
+}
+
+.project-section{
+    padding: 1%;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    row-gap: 3rem;
+
+}
+
+.project-card{
+
+    width: 27%;
+    text-align: center;
+}
+
+.project-card img{
+    width: 100%;
+}
+
+footer{
+    text-align: center;
+    padding: 4%;
+    background-color: grey;
+}
+
+a:hover{
+
+    background-color: black;
+    color: white;
+}
+@media screen and (max-width:1100px){
+    header{
+        flex-direction: column;
+        justify-content: center;
+    }
+    nav{
+        margin-top: 5%;
+    }
+    h1{
+        font-size: 4rem;
+        margin: 1rem;
+    }
+}
+@media  and (max-width:600px) {
+    main{
+        width:100vw;
+        height:60vw;
+    }
+    .project-card{
+        width: 40%;
+    }
+    
+}
